# cookiecutter-template

./: CLAUDE.md  README.md  cookiecutter.json  prompt.md
prompt/: initial-prompt.md  template_bootstrap-tfstate.sh
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: deploy-manual.yml  deploy-preprod.yml  main.yml  master.yml  pr.yml
{{cookiecutter.project_slug}}/backend/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_slug}}/scripts/: bootstrap-tfstate.sh  setup-aim-oidc-and-aim-role-for-cicd-in-aws.sh  setup-deploy-vars-in-github.sh  setup-github-repo.sh
{{cookiecutter.project_slug}}/terraform/preprod/: main.tf
{{cookiecutter.project_slug}}/terraform/prod/: main.tf
{{cookiecutter.project_slug}}/tests/: test_smoke.py
