[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
authors = [{ name = "{{ cookiecutter.author_name }}" }]
{%- if cookiecutter.license != "Proprietary" %}
license = "{{ cookiecutter.license }}"
{%- endif %}
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/{{ cookiecutter.package_name }}"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "commitizen>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py{{ cookiecutter.python_version|replace('.', '') }}"
src = ["backend", "tests"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"
line-ending = "lf"
exclude = ["*.md"]

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "F",     # pyflakes
  "I",     # isort
  "UP",    # pyupgrade
  "B",     # flake8-bugbear
  "SIM",   # flake8-simplify
  "RUF",   # ruff-specific rules
  "N",     # pep8-naming
]

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
strict = true
show_error_codes = true
explicit_package_bases = true
mypy_path = "backend"
files = ["backend", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]
addopts = "-ra"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true
